methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:1: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono2:1: error: expected start of definition
override def run() {
         ^PictureMono2:6: error: expected class or object definition
def carrémotif() {
^PictureMono2:16: error: expected class or object definition
def Marquer(){
^PictureMono2:20: error: expected class or object definition
def FaireMotif(){
^