methods.picture.PictureMono2.scala.code
override def run() {
  carrémotif()
  avance(8)
}

def carrémotif() {
  for(i <-0 to 3){
  avance(2)
  FaireMotif()
  avance(2)
  gauche()
	}
}
  

def Marquer(){
  baisseBrosse()
  leveBrosse()
}
def FaireMotif(){
 	Marquer()
  avance()
  gauche()
  avance()
  Marquer()
  droite()
  avance()
  droite()
  avance()
  Marquer()
  g